Address review comments

--- a/app/db/006/README
+++ b/app/db/006/README
@@ -1,3 +1,6 @@
 This database change is to enable entering of arbitrary json into the SubjectFile table.
 We want to do this because polyjuice, a library to clean and read dicom files is being
 integrated to let uploaders do less data entry
+
+We also want to support barch downloads with this change which utilizes some of the
+polyjuice changes
